mutants.out/log/src__http__response_builder.rs_line_172_col_9.log

*** src/http/response_builder.rs:172:9: replace ResponseBuilder<S>::body -> Self with Default::default()

*** mutation diff:
--- src/http/response_builder.rs
+++ replace ResponseBuilder<S>::body -> Self with Default::default()
@@ -164,18 +164,17 @@
     /// # use http::ResponseBuilder;
     /// let response = ResponseBuilder::ok()
     ///     .body("Hello, world!")
     ///     .build();
     ///
     /// assert_eq!(response.body, Some("Hello, world!".as_bytes().to_vec()));
     /// ```
     pub fn body(mut self, body: impl Into<Vec<u8>>) -> Self {
-        self.body = Some(body.into());
-        self
+        Default::default() /* ~ changed by cargo-mutants ~ */
     }
 }
 
 impl Default for ResponseBuilder<StatusCode> {
     fn default() -> Self {
         ResponseBuilder {
             status_code: StatusCode::Ok,
             headers: None,


*** /Users/aw/.rustup/toolchains/stable-aarch64-apple-darwin/bin/cargo test --no-run --manifest-path /var/folders/dk/rmy45p9s5bn3y62kyrkfh6440000gn/T/cargo-mutants-codecrafters-http-server-rust-eXV76S.tmp/Cargo.toml --all-features
   Compiling http-server-starter-rust v0.1.0 (/var/folders/dk/rmy45p9s5bn3y62kyrkfh6440000gn/T/cargo-mutants-codecrafters-http-server-rust-eXV76S.tmp)
error[E0277]: the trait bound `response_builder::ResponseBuilder<S>: std::default::Default` is not satisfied
   --> src/http/response_builder.rs:172:9
    |
172 |         Default::default() /* ~ changed by cargo-mutants ~ */
    |         ^^^^^^^^^^^^^^^^^^ the trait `std::default::Default` is not implemented for `response_builder::ResponseBuilder<S>`
    |
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
    |
62  | impl<S> ResponseBuilder<S> where response_builder::ResponseBuilder<S>: std::default::Default {
    |                            +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

For more information about this error, try `rustc --explain E0277`.
error: could not compile `http-server-starter-rust` (bin "http-server-starter-rust" test) due to 1 previous error

*** result: Failure(101)
